--- a/src/main/resources/css/index.css
+++ b/src/main/resources/css/index.css
@@ -8,7 +8,7 @@ ul, li {
 body {
 	width: 100%;
 	height: 100%;
-	background-image: url(/Demo/img/bg.jpg);
+	/* background-image: url(/Demo/img/bg.jpg); */
 }
 
 .con_box {
